# LamTo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: flutter-app.yml  flutter-nightly.yml
.superpowers/sdd/: final-review-fix-report.md  task-10-report.md  task-11-report.md  task-12-report.md  task-13-report.md  task-14-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md  task-9-review-final.md
app/: README.md  analysis_options.yaml  pubspec.yaml
app/integration_test/: app_test.dart
app/lib/: app.dart  main.dart  theme.dart
app/linux/: CMakeLists.txt
app/test/: account_screen_test.dart  adaptive_test.dart  api_base_url_test.dart  api_client_models_test.dart  app_entry_smoke_test.dart  app_routing_test.dart  auth_interceptor_test.dart  auth_repository_contract_test.dart  authenticated_image_test.dart  deep_link_test.dart  dio_timeouts_test.dart  evidence_labels_test.dart  failure_test.dart  format_test.dart  gate_plate_ocr_test.dart  gate_plate_text_test.dart  gate_reader_repository_test.dart  gate_reader_screen_test.dart  gate_registration_screen_test.dart  home_screen_test.dart  issue_detail_test.dart  l10n_test.dart  ledger_screens_test.dart  load_more_button_test.dart  location_picker_test.dart  my_issues_test.dart  (+18 more)
chain/: .gitignore  foundry.toml
ops/: acceptance-report-template.md  deployment-checklist.md  emergency-drill-runbook.md  pilot-runbook.md  postgres-init.sql
(+510 files in other folders)
